# star-fantasy

./: Cargo.toml
references/: nespallete1.txt  tutorial.rs
src/: common.rs  inputs.rs  main.rs  visuals.rs
src/common/: cycle.rs  mod.rs  size.rs  states.rs  u_int_float.rs
src/inputs/: input_settings.rs
src/visuals/: asset_constants.rs  camera.rs  mod.rs  movement.rs  settings.rs
